# pokemon-policy-network-mcts

./: .gitignore  .gitmodules  README.md  create-data-pipeline.sh  create-mcts-pipeline.sh  create_compose.py  create_datacollection_pipeline.sh  docker-compose.yml  mcts-docker-compose.yml  notes.md  requirements.txt  training_split.py
_showdown/: usergroups.csv
doc/: battle-to-json-example.json  data.md  end-of-game-json-example.json  moves-with-accuracy-100-no-side-effects.md  notes.md  pmariglia.md  pokemon-showdown.md
doc/showdown-websocket-client/: requirements.txt  showdown_ws.py
mcts/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
mcts/doc/: vanilla-mcts-2v2-mirror-match-results-with-seed.md
mcts/models/: three_pokemon_with_data_augmentation.torchscript
mcts/src/: main.cpp  player_data.h  policy_network.cpp  policy_network.h  showdown_client.cpp  showdown_client.h  showdown_login_request.cpp  showdown_login_request.h  showdown_simulator.cpp  showdown_simulator.h  showdown_simulator_get_pokemon_info.cpp  showdown_websocket.cpp  showdown_websocket.h  simple_heuristic_policy.cpp  simple_heuristic_policy.h  switch_equivariant_agent.cpp  switch_equivariant_agent.h  websocket.h
mcts/src/agents/: default_action_agent.cpp  default_action_agent.h  mcts_agent.cpp  mcts_agent.h  random_agent.cpp  random_agent.h
mcts/src/agents/mcts/: mcts.cpp  mcts.h  node.cpp  node.h  uct_score.cpp  uct_score.h  vanilla.cpp  vanilla.h
mcts/src/policies/: policy.h  policy_network.cpp  policy_network.h  simple_heuristic_policy.cpp  simple_heuristic_policy.h  switch_equivariant_agent.cpp  switch_equivariant_agent.h
mcts/src/showdown_client/: showdown_client.cpp  showdown_client.h  showdown_login_request.h  websocket.cpp
mcts/src/showdown_simulator/: player_data.h  showdown_simulator.cpp
pmariglia/: .env  Dockerfile  accept  challenge
policynet/: config.py  earlystopping.py  eval.py  transforms.py  utils.py
policynet/configs/: config.json
policynet/dataloader/: utils.py
scripts/: create-data-pipeline.sh  create-mcts-pipeline.sh
showdown/: Dockerfile  config.js  formats.ts  usergroups.csv
simple_mlp/: config.py  cpp_model_conversion.py  eval.py  lrscheduler.py  network.py  plot_losses.py  switch_equivariant_agent.py  train.py  transforms.py  utils.py
simple_mlp/configs/: config.json  template.json
simple_mlp/dataloader/: dataconverter.py  dataloader.py  dataset.py
teams/no_type_only_damage/: eevee  meowth  slaking
teams/only_damage_two_pokemon/: blissey_snorlax  chansey_dunsparce  regigias_arceus_2  regigigas_arceus  slaking_kangaskhan  slaking_kangaskhan_2  slaking_snorlax  tauros_miltank
teams/only_damage_two_pokemon_val/: lickilicky_exploud  ursaring_bouffalant
teams/physical_special/: audino  blissey  bouffalant  braviary  dubwool  exploud  farfetchd  linoone  miltank  noctowl  porygon-z  snorlax  tauros  togekiss  unfezant  wiglytuff
teams/same-type-attack-bonus/: barraskewda  celebi  decidueye  leafeon  suicune  tangrowth
teams/same_type_attack_bonus/: arcanine  blastoise  cinderace  darmanitan  entei  flareon  inteleon  kyogre  magmortar  milotic  ninetales  rillaboom  sceptile  slowbro  vaporeon
teams/same_type_attack_bonus_test/: bellossom  clawitzer  heatmor  kingler  torkoal  tsareena
teams/switch_three_pokemon/: arcanine_barraskewda_rillaboom  arcanine_leafeon_entei  barraskewda_magortar_celebi  barraskewda_tangrowth_rapidash  blastoise_barraskewda_darmanitan  blastoise_decidueye_arcanine  celebi_inteleon_magmortar  celebi_virizion_milotic  cinderace_suicune_sceptile  cinderace_zarude_blastoise  darmanitan_cinderace_rillaboom  darmanitan_inteleon_decidueye  decidueye_inteleon_rapidash  decidueye_leafeon_kyogre  entei_tangrowth_slowbro  entei_vaporeon_decidueye  flareon_blastoise_leafeon  flareon_cinderace_inteleon  inteleon_barraskewda_zarude  inteleon_ninetales_celebi  kyogre_entei_leafeon  kyogre_leafeon_magmortar  leafeon_flareon_vaporeon  leafeon_kyogre_ninetales  magmortar_rapidash_suicune  magmortar_virizion_milotic  milotic_darmanitan_tangrowth  (+21 more)
(+165 files in other folders)
